--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "description": "A foundation for scalable desktop apps",
+  "description": "Desktop app for schedules management",
   "keywords": [
     "electron",
-    "boilerplate",
     "react",
     "typescript",
     "ts",
@@ -17,19 +16,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/electron-react-boilerplate/electron-react-boilerplate.git"
+    "url": "https://github.com/AtriAhmed/schedular-react-electron"
   },
   "license": "MIT",
   "author": {
-    "name": "Electron React Boilerplate Maintainers",
-    "email": "electronreactboilerplate@gmail.com",
-    "url": "https://electron-react-boilerplate.js.org"
+    "name": "Atri Ahmed",
+    "email": "atriahmed.1999@gmail.com",
+    "url": "https://github.com/AtriAhmed"
   },
   "contributors": [
     {
-      "name": "Amila Welihinda",
-      "email": "amilajack@gmail.com",
-      "url": "https://github.com/amilajack"
+      "name": "Atri Ahmed",
+      "email": "atriahmed.1999@gmail.com",
+      "url": "https://github.com/AtriAhmed"
     }
   ],
   "main": "./src/main/main.ts",
